// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldEditor should render create new scripted field correctly 1`] = `
<div>
  <eui-text>
    <h3>
      <FormattedMessage
        defaultMessage="Create scripted field"
        id="indexPatternManagement.createHeader"
        values={Object {}}
      />
    </h3>
  </eui-text>
  <eui-spacer
    size="m"
  />
  <eui-form>
    <scripting-disabled-callOut
      isVisible={false}
    />
    <scripting-warning-callOut
      isVisible={true}
    />
    <ScriptingHelpFlyout
      executeScript={[Function]}
      indexPattern={
        Object {
          "fields": Object {
            "getAll": [Function],
            "getByName": [Function],
          },
          "getFormatterForField": [Function],
          "getFormatterForFieldNoDefault": [Function],
        }
      }
      isVisible={false}
      lang="painless"
      onClose={[Function]}
    />
    <eui-form-row
      error="Name is required"
      helpText={null}
      isInvalid={true}
      label="Name"
    >
      <eui-field-text
        data-test-subj="editorFieldName"
        isInvalid={true}
        onChange={[Function]}
        placeholder="New scripted field"
        value=""
      />
    </eui-form-row>
    <eui-form-row
      helpText={
        <FormattedMessage
          defaultMessage="Set a custom label to use when this field is displayed in Discover, Maps, and Visualize. Queries and filters don't currently support a custom label and will use the original field name."
          id="indexPatternManagement.labelHelpText"
          values={Object {}}
        />
      }
      label="Custom label"
    >
      <eui-field-text
        data-test-subj="editorFieldCustomLabel"
        onChange={[Function]}
        value=""
      />
    </eui-form-row>
    <eui-form-row
      helpText={null}
      label="Language"
    >
      <eui-select
        data-test-subj="editorFieldLang"
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "painless",
              "value": "painless",
            },
            Object {
              "text": "testlang",
              "value": "testlang",
            },
          ]
        }
        value="painless"
      />
    </eui-form-row>
    <eui-form-row
      label="Type"
    >
      <eui-select
        data-test-subj="editorFieldType"
        disabled={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "number",
              "value": "number",
            },
            Object {
              "text": "string",
              "value": "string",
            },
            Object {
              "text": "date",
              "value": "date",
            },
            Object {
              "text": "boolean",
              "value": "boolean",
            },
          ]
        }
        value="number"
      />
    </eui-form-row>
    <eui-form-row
      helpText={
        <FormattedMessage
          defaultMessage="Formatting controls how values are displayed. Changing this setting might also affect the field value and highlighting in Discover."
          id="indexPatternManagement.formatLabel"
          values={Object {}}
        />
      }
      label={
        <FormattedMessage
          defaultMessage="Format"
          id="indexPatternManagement.formatHeader"
          values={Object {}}
        />
      }
    >
      <eui-select
        data-test-subj="editorSelectedFormatId"
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "- Default -",
              "value": "",
            },
            Object {
              "text": undefined,
              "value": "",
            },
          ]
        }
      />
    </eui-form-row>
    <eui-form-row
      label="Popularity"
    >
      <eui-field-number
        data-test-subj="editorFieldCount"
        onChange={[Function]}
      />
    </eui-form-row>
    <eui-form-row
      error={
        <FormattedMessage
          defaultMessage="Script is required"
          id="indexPatternManagement.scriptRequiredErrorMessage"
          values={Object {}}
        />
      }
      fullWidth={true}
      isInvalid={true}
      label="Script"
    >
      <code-editor
        aria-label="Script editor"
        data-test-subj="editorFieldScript"
        height="300px"
        languageId="painless"
        onChange={[Function]}
        value=""
        width="100%"
      />
    </eui-form-row>
    <eui-form-row>
      <eui-text>
        <FormattedMessage
          defaultMessage="Access fields with {code}."
          id="indexPatternManagement.script.accessWithLabel"
          values={
            Object {
              "code": <code>
                doc['some_field'].value
              </code>,
            }
          }
        />
      </eui-text>
      <br />
      <eui-link
        data-test-subj="scriptedFieldsHelpLink"
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Get help with the syntax and preview the results of your script."
          id="indexPatternManagement.script.getHelpLabel"
          values={Object {}}
        />
      </eui-link>
    </eui-form-row>
    <eui-form-row>
      <eui-flex-group>
        <eui-flex-item
          grow={false}
        >
          <eui-button
            data-test-subj="fieldSaveButton"
            fill={true}
            isDisabled={true}
            isLoading={false}
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Create field"
              id="indexPatternManagement.actions.createButton"
              values={Object {}}
            />
          </eui-button>
        </eui-flex-item>
        <eui-flex-item
          grow={false}
        >
          <eui-button-empty
            data-test-subj="fieldCancelButton"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Cancel"
              id="indexPatternManagement.actions.cancelButton"
              values={Object {}}
            />
          </eui-button-empty>
        </eui-flex-item>
      </eui-flex-group>
    </eui-form-row>
  </eui-form>
  <eui-spacer
    size="l"
  />
</div>
`;

exports[`FieldEditor should render edit scripted field correctly 1`] = `
<div>
  <eui-text>
    <h3>
      <FormattedMessage
        defaultMessage="Edit {fieldName}"
        id="indexPatternManagement.editHeader"
        values={
          Object {
            "fieldName": "test",
          }
        }
      />
    </h3>
  </eui-text>
  <eui-spacer
    size="m"
  />
  <eui-form>
    <scripting-disabled-callOut
      isVisible={false}
    />
    <scripting-warning-callOut
      isVisible={true}
    />
    <ScriptingHelpFlyout
      executeScript={[Function]}
      indexPattern={
        Object {
          "fields": Object {
            "getAll": [Function],
            "getByName": [Function],
          },
          "getFormatterForField": [Function],
          "getFormatterForFieldNoDefault": [Function],
        }
      }
      isVisible={false}
      lang="painless"
      name="test"
      onClose={[Function]}
      script="doc.test.value"
    />
    <eui-form-row
      helpText={
        <FormattedMessage
          defaultMessage="Set a custom label to use when this field is displayed in Discover, Maps, and Visualize. Queries and filters don't currently support a custom label and will use the original field name."
          id="indexPatternManagement.labelHelpText"
          values={Object {}}
        />
      }
      label="Custom label"
    >
      <eui-field-text
        data-test-subj="editorFieldCustomLabel"
        onChange={[Function]}
        placeholder="test"
        value=""
      />
    </eui-form-row>
    <eui-form-row
      helpText={null}
      label="Language"
    >
      <eui-select
        data-test-subj="editorFieldLang"
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "painless",
              "value": "painless",
            },
            Object {
              "text": "testlang",
              "value": "testlang",
            },
          ]
        }
        value="painless"
      />
    </eui-form-row>
    <eui-form-row
      label="Type"
    >
      <eui-select
        data-test-subj="editorFieldType"
        disabled={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "number",
              "value": "number",
            },
            Object {
              "text": "string",
              "value": "string",
            },
            Object {
              "text": "date",
              "value": "date",
            },
            Object {
              "text": "boolean",
              "value": "boolean",
            },
          ]
        }
        value="number"
      />
    </eui-form-row>
    <eui-form-row
      helpText={
        <FormattedMessage
          defaultMessage="Formatting controls how values are displayed. Changing this setting might also affect the field value and highlighting in Discover."
          id="indexPatternManagement.formatLabel"
          values={Object {}}
        />
      }
      label={
        <FormattedMessage
          defaultMessage="Format"
          id="indexPatternManagement.formatHeader"
          values={Object {}}
        />
      }
    >
      <eui-select
        data-test-subj="editorSelectedFormatId"
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "- Default -",
              "value": "",
            },
            Object {
              "text": undefined,
              "value": "",
            },
          ]
        }
      />
    </eui-form-row>
    <eui-form-row
      label="Popularity"
    >
      <eui-field-number
        data-test-subj="editorFieldCount"
        onChange={[Function]}
      />
    </eui-form-row>
    <eui-form-row
      error={null}
      fullWidth={true}
      isInvalid={false}
      label="Script"
    >
      <code-editor
        aria-label="Script editor"
        data-test-subj="editorFieldScript"
        height="300px"
        languageId="painless"
        onChange={[Function]}
        value="doc.test.value"
        width="100%"
      />
    </eui-form-row>
    <eui-form-row>
      <eui-text>
        <FormattedMessage
          defaultMessage="Access fields with {code}."
          id="indexPatternManagement.script.accessWithLabel"
          values={
            Object {
              "code": <code>
                doc['some_field'].value
              </code>,
            }
          }
        />
      </eui-text>
      <br />
      <eui-link
        data-test-subj="scriptedFieldsHelpLink"
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Get help with the syntax and preview the results of your script."
          id="indexPatternManagement.script.getHelpLabel"
          values={Object {}}
        />
      </eui-link>
    </eui-form-row>
    <eui-form-row>
      <eui-flex-group>
        <eui-flex-item
          grow={false}
        >
          <eui-button
            data-test-subj="fieldSaveButton"
            fill={true}
            isDisabled={false}
            isLoading={false}
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Save field"
              id="indexPatternManagement.actions.saveButton"
              values={Object {}}
            />
          </eui-button>
        </eui-flex-item>
        <eui-flex-item
          grow={false}
        >
          <eui-button-empty
            data-test-subj="fieldCancelButton"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Cancel"
              id="indexPatternManagement.actions.cancelButton"
              values={Object {}}
            />
          </eui-button-empty>
        </eui-flex-item>
        <eui-flex-item>
          <eui-flex-group
            justifyContent="flexEnd"
          >
            <eui-flex-item
              grow={false}
            >
              <eui-button-empty
                color="danger"
                onClick={[Function]}
              >
                <FormattedMessage
                  defaultMessage="Delete"
                  id="indexPatternManagement.actions.deleteButton"
                  values={Object {}}
                />
              </eui-button-empty>
            </eui-flex-item>
          </eui-flex-group>
        </eui-flex-item>
      </eui-flex-group>
    </eui-form-row>
  </eui-form>
  <eui-spacer
    size="l"
  />
</div>
`;

exports[`FieldEditor should show conflict field warning 1`] = `
<div>
  <eui-text>
    <h3>
      <FormattedMessage
        defaultMessage="Create scripted field"
        id="indexPatternManagement.createHeader"
        values={Object {}}
      />
    </h3>
  </eui-text>
  <eui-spacer
    size="m"
  />
  <eui-form>
    <scripting-disabled-callOut
      isVisible={false}
    />
    <scripting-warning-callOut
      isVisible={true}
    />
    <ScriptingHelpFlyout
      executeScript={[Function]}
      indexPattern={
        Object {
          "fields": Object {
            "getAll": [Function],
            "getByName": [Function],
          },
          "getFormatterForField": [Function],
          "getFormatterForFieldNoDefault": [Function],
        }
      }
      isVisible={false}
      lang="painless"
      name="foobar"
      onClose={[Function]}
    />
    <eui-form-row
      error={false}
      helpText={
        <span>
          <eui-icon
            color="warning"
            size="s"
            type="alert"
          />
           
          <FormattedMessage
            defaultMessage="{mappingConflict} You already have a field with the name {fieldName}. Naming your scripted field with the same name means you won't be able to query both fields at the same time."
            id="indexPatternManagement.mappingConflictLabel.mappingConflictDetail"
            values={
              Object {
                "fieldName": <eui-code>
                  foobar
                </eui-code>,
                "mappingConflict": <strong>
                  <FormattedMessage
                    defaultMessage="Mapping Conflict:"
                    id="indexPatternManagement.mappingConflictLabel.mappingConflictLabel"
                    values={Object {}}
                  />
                </strong>,
              }
            }
          />
        </span>
      }
      isInvalid={false}
      label="Name"
    >
      <eui-field-text
        data-test-subj="editorFieldName"
        isInvalid={false}
        onChange={[Function]}
        placeholder="New scripted field"
        value="foobar"
      />
    </eui-form-row>
    <eui-form-row
      helpText={
        <FormattedMessage
          defaultMessage="Set a custom label to use when this field is displayed in Discover, Maps, and Visualize. Queries and filters don't currently support a custom label and will use the original field name."
          id="indexPatternManagement.labelHelpText"
          values={Object {}}
        />
      }
      label="Custom label"
    >
      <eui-field-text
        data-test-subj="editorFieldCustomLabel"
        onChange={[Function]}
        placeholder="foobar"
        value=""
      />
    </eui-form-row>
    <eui-form-row
      helpText={null}
      label="Language"
    >
      <eui-select
        data-test-subj="editorFieldLang"
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "painless",
              "value": "painless",
            },
            Object {
              "text": "testlang",
              "value": "testlang",
            },
          ]
        }
        value="painless"
      />
    </eui-form-row>
    <eui-form-row
      label="Type"
    >
      <eui-select
        data-test-subj="editorFieldType"
        disabled={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "number",
              "value": "number",
            },
            Object {
              "text": "string",
              "value": "string",
            },
            Object {
              "text": "date",
              "value": "date",
            },
            Object {
              "text": "boolean",
              "value": "boolean",
            },
          ]
        }
        value="number"
      />
    </eui-form-row>
    <eui-form-row
      helpText={
        <FormattedMessage
          defaultMessage="Formatting controls how values are displayed. Changing this setting might also affect the field value and highlighting in Discover."
          id="indexPatternManagement.formatLabel"
          values={Object {}}
        />
      }
      label={
        <FormattedMessage
          defaultMessage="Format"
          id="indexPatternManagement.formatHeader"
          values={Object {}}
        />
      }
    >
      <eui-select
        data-test-subj="editorSelectedFormatId"
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "- Default -",
              "value": "",
            },
            Object {
              "text": undefined,
              "value": "",
            },
          ]
        }
      />
    </eui-form-row>
    <eui-form-row
      label="Popularity"
    >
      <eui-field-number
        data-test-subj="editorFieldCount"
        onChange={[Function]}
      />
    </eui-form-row>
    <eui-form-row
      error={
        <FormattedMessage
          defaultMessage="Script is required"
          id="indexPatternManagement.scriptRequiredErrorMessage"
          values={Object {}}
        />
      }
      fullWidth={true}
      isInvalid={true}
      label="Script"
    >
      <code-editor
        aria-label="Script editor"
        data-test-subj="editorFieldScript"
        height="300px"
        languageId="painless"
        onChange={[Function]}
        value=""
        width="100%"
      />
    </eui-form-row>
    <eui-form-row>
      <eui-text>
        <FormattedMessage
          defaultMessage="Access fields with {code}."
          id="indexPatternManagement.script.accessWithLabel"
          values={
            Object {
              "code": <code>
                doc['some_field'].value
              </code>,
            }
          }
        />
      </eui-text>
      <br />
      <eui-link
        data-test-subj="scriptedFieldsHelpLink"
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Get help with the syntax and preview the results of your script."
          id="indexPatternManagement.script.getHelpLabel"
          values={Object {}}
        />
      </eui-link>
    </eui-form-row>
    <eui-form-row>
      <eui-flex-group>
        <eui-flex-item
          grow={false}
        >
          <eui-button
            data-test-subj="fieldSaveButton"
            fill={true}
            isDisabled={true}
            isLoading={false}
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Create field"
              id="indexPatternManagement.actions.createButton"
              values={Object {}}
            />
          </eui-button>
        </eui-flex-item>
        <eui-flex-item
          grow={false}
        >
          <eui-button-empty
            data-test-subj="fieldCancelButton"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Cancel"
              id="indexPatternManagement.actions.cancelButton"
              values={Object {}}
            />
          </eui-button-empty>
        </eui-flex-item>
      </eui-flex-group>
    </eui-form-row>
  </eui-form>
  <eui-spacer
    size="l"
  />
</div>
`;

exports[`FieldEditor should show deprecated lang warning 1`] = `
<div>
  <eui-text>
    <h3>
      <FormattedMessage
        defaultMessage="Edit {fieldName}"
        id="indexPatternManagement.editHeader"
        values={
          Object {
            "fieldName": "test",
          }
        }
      />
    </h3>
  </eui-text>
  <eui-spacer
    size="m"
  />
  <eui-form>
    <scripting-disabled-callOut
      isVisible={false}
    />
    <scripting-warning-callOut
      isVisible={true}
    />
    <ScriptingHelpFlyout
      executeScript={[Function]}
      indexPattern={
        Object {
          "fields": Object {
            "getAll": [Function],
            "getByName": [Function],
          },
          "getFormatterForField": [Function],
          "getFormatterForFieldNoDefault": [Function],
        }
      }
      isVisible={false}
      lang="testlang"
      name="test"
      onClose={[Function]}
      script="doc.test.value"
    />
    <eui-form-row
      helpText={
        <FormattedMessage
          defaultMessage="Set a custom label to use when this field is displayed in Discover, Maps, and Visualize. Queries and filters don't currently support a custom label and will use the original field name."
          id="indexPatternManagement.labelHelpText"
          values={Object {}}
        />
      }
      label="Custom label"
    >
      <eui-field-text
        data-test-subj="editorFieldCustomLabel"
        onChange={[Function]}
        placeholder="test"
        value=""
      />
    </eui-form-row>
    <eui-form-row
      helpText={
        <span>
          <eui-icon
            color="warning"
            size="s"
            type="alert"
          />
           
          <strong>
            <FormattedMessage
              defaultMessage="Deprecation Warning:"
              id="indexPatternManagement.warningHeader"
              values={Object {}}
            />
          </strong>
           
          <FormattedMessage
            defaultMessage="{language} is deprecated and support will be removed in the next major version of Kibana and Elasticsearch. We recommend using {painlessLink} for new scripted fields."
            id="indexPatternManagement.warningLabel.warningDetail"
            values={
              Object {
                "language": <eui-code>
                  testlang
                </eui-code>,
                "painlessLink": <eui-link
                  target="_blank"
                >
                  <FormattedMessage
                    defaultMessage="Painless"
                    id="indexPatternManagement.warningLabel.painlessLinkLabel"
                    values={Object {}}
                  />
                </eui-link>,
              }
            }
          />
        </span>
      }
      label="Language"
    >
      <eui-select
        data-test-subj="editorFieldLang"
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "painless",
              "value": "painless",
            },
            Object {
              "text": "testlang",
              "value": "testlang",
            },
          ]
        }
        value="testlang"
      />
    </eui-form-row>
    <eui-form-row
      label="Type"
    >
      <eui-select
        data-test-subj="editorFieldType"
        disabled={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "string",
              "value": "string",
            },
            Object {
              "text": "number",
              "value": "number",
            },
            Object {
              "text": "number_range",
              "value": "number_range",
            },
            Object {
              "text": "date",
              "value": "date",
            },
            Object {
              "text": "date_range",
              "value": "date_range",
            },
            Object {
              "text": "ip",
              "value": "ip",
            },
            Object {
              "text": "ip_range",
              "value": "ip_range",
            },
            Object {
              "text": "boolean",
              "value": "boolean",
            },
            Object {
              "text": "object",
              "value": "object",
            },
            Object {
              "text": "nested",
              "value": "nested",
            },
            Object {
              "text": "geo_point",
              "value": "geo_point",
            },
            Object {
              "text": "geo_shape",
              "value": "geo_shape",
            },
            Object {
              "text": "attachment",
              "value": "attachment",
            },
            Object {
              "text": "murmur3",
              "value": "murmur3",
            },
            Object {
              "text": "_source",
              "value": "_source",
            },
            Object {
              "text": "histogram",
              "value": "histogram",
            },
            Object {
              "text": "conflict",
              "value": "conflict",
            },
            Object {
              "text": "unknown",
              "value": "unknown",
            },
          ]
        }
        value="number"
      />
    </eui-form-row>
    <eui-form-row
      helpText={
        <FormattedMessage
          defaultMessage="Formatting controls how values are displayed. Changing this setting might also affect the field value and highlighting in Discover."
          id="indexPatternManagement.formatLabel"
          values={Object {}}
        />
      }
      label={
        <FormattedMessage
          defaultMessage="Format"
          id="indexPatternManagement.formatHeader"
          values={Object {}}
        />
      }
    >
      <eui-select
        data-test-subj="editorSelectedFormatId"
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "- Default -",
              "value": "",
            },
            Object {
              "text": undefined,
              "value": "",
            },
          ]
        }
      />
    </eui-form-row>
    <eui-form-row
      label="Popularity"
    >
      <eui-field-number
        data-test-subj="editorFieldCount"
        onChange={[Function]}
      />
    </eui-form-row>
    <eui-form-row
      error={null}
      fullWidth={true}
      isInvalid={false}
      label="Script"
    >
      <code-editor
        aria-label="Script editor"
        data-test-subj="editorFieldScript"
        height="300px"
        languageId="painless"
        onChange={[Function]}
        value="doc.test.value"
        width="100%"
      />
    </eui-form-row>
    <eui-form-row>
      <eui-text>
        <FormattedMessage
          defaultMessage="Access fields with {code}."
          id="indexPatternManagement.script.accessWithLabel"
          values={
            Object {
              "code": <code>
                doc['some_field'].value
              </code>,
            }
          }
        />
      </eui-text>
      <br />
      <eui-link
        data-test-subj="scriptedFieldsHelpLink"
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Get help with the syntax and preview the results of your script."
          id="indexPatternManagement.script.getHelpLabel"
          values={Object {}}
        />
      </eui-link>
    </eui-form-row>
    <eui-form-row>
      <eui-flex-group>
        <eui-flex-item
          grow={false}
        >
          <eui-button
            data-test-subj="fieldSaveButton"
            fill={true}
            isDisabled={false}
            isLoading={false}
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Save field"
              id="indexPatternManagement.actions.saveButton"
              values={Object {}}
            />
          </eui-button>
        </eui-flex-item>
        <eui-flex-item
          grow={false}
        >
          <eui-button-empty
            data-test-subj="fieldCancelButton"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Cancel"
              id="indexPatternManagement.actions.cancelButton"
              values={Object {}}
            />
          </eui-button-empty>
        </eui-flex-item>
        <eui-flex-item>
          <eui-flex-group
            justifyContent="flexEnd"
          >
            <eui-flex-item
              grow={false}
            >
              <eui-button-empty
                color="danger"
                onClick={[Function]}
              >
                <FormattedMessage
                  defaultMessage="Delete"
                  id="indexPatternManagement.actions.deleteButton"
                  values={Object {}}
                />
              </eui-button-empty>
            </eui-flex-item>
          </eui-flex-group>
        </eui-flex-item>
      </eui-flex-group>
    </eui-form-row>
  </eui-form>
  <eui-spacer
    size="l"
  />
</div>
`;

exports[`FieldEditor should show multiple type field warning with a table containing indices 1`] = `
<div>
  <eui-text>
    <h3>
      <FormattedMessage
        defaultMessage="Create scripted field"
        id="indexPatternManagement.createHeader"
        values={Object {}}
      />
    </h3>
  </eui-text>
  <eui-spacer
    size="m"
  />
  <eui-form>
    <scripting-disabled-callOut
      isVisible={false}
    />
    <scripting-warning-callOut
      isVisible={true}
    />
    <ScriptingHelpFlyout
      executeScript={[Function]}
      indexPattern={
        Object {
          "fields": Object {
            "getAll": [Function],
            "getByName": [Function],
          },
          "getFormatterForField": [Function],
          "getFormatterForFieldNoDefault": [Function],
        }
      }
      isVisible={false}
      lang="painless"
      name="foobar"
      onClose={[Function]}
    />
    <eui-form-row
      error={false}
      helpText={
        <span>
          <eui-icon
            color="warning"
            size="s"
            type="alert"
          />
           
          <FormattedMessage
            defaultMessage="{mappingConflict} You already have a field with the name {fieldName}. Naming your scripted field with the same name means you won't be able to query both fields at the same time."
            id="indexPatternManagement.mappingConflictLabel.mappingConflictDetail"
            values={
              Object {
                "fieldName": <eui-code>
                  foobar
                </eui-code>,
                "mappingConflict": <strong>
                  <FormattedMessage
                    defaultMessage="Mapping Conflict:"
                    id="indexPatternManagement.mappingConflictLabel.mappingConflictLabel"
                    values={Object {}}
                  />
                </strong>,
              }
            }
          />
        </span>
      }
      isInvalid={false}
      label="Name"
    >
      <eui-field-text
        data-test-subj="editorFieldName"
        isInvalid={false}
        onChange={[Function]}
        placeholder="New scripted field"
        value="foobar"
      />
    </eui-form-row>
    <eui-form-row
      helpText={
        <FormattedMessage
          defaultMessage="Set a custom label to use when this field is displayed in Discover, Maps, and Visualize. Queries and filters don't currently support a custom label and will use the original field name."
          id="indexPatternManagement.labelHelpText"
          values={Object {}}
        />
      }
      label="Custom label"
    >
      <eui-field-text
        data-test-subj="editorFieldCustomLabel"
        onChange={[Function]}
        placeholder="foobar"
        value=""
      />
    </eui-form-row>
    <eui-form-row
      helpText={null}
      label="Language"
    >
      <eui-select
        data-test-subj="editorFieldLang"
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "painless",
              "value": "painless",
            },
            Object {
              "text": "testlang",
              "value": "testlang",
            },
          ]
        }
        value="painless"
      />
    </eui-form-row>
    <eui-form-row
      label="Type"
    >
      <eui-select
        data-test-subj="editorFieldType"
        disabled={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "number",
              "value": "number",
            },
            Object {
              "text": "string",
              "value": "string",
            },
            Object {
              "text": "date",
              "value": "date",
            },
            Object {
              "text": "boolean",
              "value": "boolean",
            },
          ]
        }
        value="number"
      />
    </eui-form-row>
    <div>
      <eui-spacer
        size="m"
      />
      <eui-call-out
        color="warning"
        iconType="alert"
        size="s"
        title={
          <FormattedMessage
            defaultMessage="Field type conflict"
            id="indexPatternManagement.fieldTypeConflict"
            values={Object {}}
          />
        }
      >
        <FormattedMessage
          defaultMessage="The type of this field changes across indices. It is unavailable for many analysis functions. The indices per type are as follows:"
          id="indexPatternManagement.multiTypeLabelDesc"
          values={Object {}}
        />
      </eui-call-out>
      <eui-spacer
        size="m"
      />
      <eui-basic-table
        columns={
          Array [
            Object {
              "field": "type",
              "name": "Type",
              "width": "100px",
            },
            Object {
              "field": "indices",
              "name": "Index names",
            },
          ]
        }
        items={
          Array [
            Object {
              "indices": "index_name_1, index_name_2",
              "type": "long",
            },
            Object {
              "indices": "index_name_3",
              "type": "text",
            },
          ]
        }
      />
      <eui-spacer
        size="m"
      />
    </div>
    <eui-form-row
      helpText={
        <FormattedMessage
          defaultMessage="Formatting controls how values are displayed. Changing this setting might also affect the field value and highlighting in Discover."
          id="indexPatternManagement.formatLabel"
          values={Object {}}
        />
      }
      label={
        <FormattedMessage
          defaultMessage="Format"
          id="indexPatternManagement.formatHeader"
          values={Object {}}
        />
      }
    >
      <eui-select
        data-test-subj="editorSelectedFormatId"
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "- Default -",
              "value": "",
            },
            Object {
              "text": undefined,
              "value": "",
            },
          ]
        }
      />
    </eui-form-row>
    <eui-form-row
      label="Popularity"
    >
      <eui-field-number
        data-test-subj="editorFieldCount"
        onChange={[Function]}
      />
    </eui-form-row>
    <eui-form-row
      error={
        <FormattedMessage
          defaultMessage="Script is required"
          id="indexPatternManagement.scriptRequiredErrorMessage"
          values={Object {}}
        />
      }
      fullWidth={true}
      isInvalid={true}
      label="Script"
    >
      <code-editor
        aria-label="Script editor"
        data-test-subj="editorFieldScript"
        height="300px"
        languageId="painless"
        onChange={[Function]}
        value=""
        width="100%"
      />
    </eui-form-row>
    <eui-form-row>
      <eui-text>
        <FormattedMessage
          defaultMessage="Access fields with {code}."
          id="indexPatternManagement.script.accessWithLabel"
          values={
            Object {
              "code": <code>
                doc['some_field'].value
              </code>,
            }
          }
        />
      </eui-text>
      <br />
      <eui-link
        data-test-subj="scriptedFieldsHelpLink"
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Get help with the syntax and preview the results of your script."
          id="indexPatternManagement.script.getHelpLabel"
          values={Object {}}
        />
      </eui-link>
    </eui-form-row>
    <eui-form-row>
      <eui-flex-group>
        <eui-flex-item
          grow={false}
        >
          <eui-button
            data-test-subj="fieldSaveButton"
            fill={true}
            isDisabled={true}
            isLoading={false}
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Create field"
              id="indexPatternManagement.actions.createButton"
              values={Object {}}
            />
          </eui-button>
        </eui-flex-item>
        <eui-flex-item
          grow={false}
        >
          <eui-button-empty
            data-test-subj="fieldCancelButton"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Cancel"
              id="indexPatternManagement.actions.cancelButton"
              values={Object {}}
            />
          </eui-button-empty>
        </eui-flex-item>
      </eui-flex-group>
    </eui-form-row>
  </eui-form>
  <eui-spacer
    size="l"
  />
</div>
`;
